[package]
name = "asymptote"
version = "0.8.0"
authors = ["Maximilian Lupke <maxlupke@gmail.com>"]
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
arrayvec = "0.4.11"
crossbeam = "0.7"
rand = "0.5.0"
shakmaty = "0.16.1"
shakmaty-syzygy = "0.13"

[profile.release]
lto = true
debug = true
codegen-units = 1

[features]
tune = []
